--- a/Frontend Redux/package.json
+++ b/Frontend Redux/package.json
@@ -15,11 +15,13 @@
 		"@mui/icons-material": "^5.11.16",
 		"@mui/material": "^5.13.5",
 		"@reduxjs/toolkit": "^1.9.5",
+		"framer-motion": "^10.12.16",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.44.3",
 		"react-redux": "^8.1.0",
-		"react-router-dom": "^6.13.0"
+		"react-router-dom": "^6.13.0",
+		"redux-persist": "^6.0.0"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.37",
