--- a/Frontend Redux/package.json
+++ b/Frontend Redux/package.json
@@ -22,7 +22,8 @@
 		"react-hook-form": "^7.44.3",
 		"react-redux": "^8.1.0",
 		"react-router-dom": "^6.13.0",
-		"redux-persist": "^6.0.0"
+		"redux-persist": "^6.0.0",
+		"redux-persist-transform-encrypt": "^5.0.0"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.37",
